# ragtime

./: .dockerignore  .env.example  .gitattributes  .gitignore  .jscpd.json  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  reproduce_git_stat.py  requirements-legacy.txt  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/actions/cleanup/: action.yml
.github/instructions/: debugging.instructions.md  frontend.instructions.md  ragtime.instructions.md  testing.instructions.md  userspace-spec.instructions.md
.github/workflows/: build-container.yml  ci.yml  main-promotion-guard.yml
docker/: .env.prod.example  Dockerfile  Dockerfile.dev  Dockerfile.runtime  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  entrypoint.runtime.sh  entrypoint.sh
docker/scripts/: backup-restore.sh  fix_inline_imports.py  functions.sh  init-pgvector.sh  install_deps_from_pyproject.py
docker/searxng/: settings.yml
docs/design/: solidworks_pdm_indexer.md
prisma/: schema.prisma
ragtime/: __init__.py  main.py  oauth_redirects.py
ragtime/api/: auth.py  routes.py
ragtime/chat_runtime/: __init__.py  payloads.py  presets.py  service.py
ragtime/config/: settings.py
ragtime/core/: __init__.py  api_accounting.py  app_setting_defaults.py  app_settings.py  auth.py  auth_methods.py  claude_code.py  container_capabilities.py  copilot_api.py  copilot_auth.py  database.py  datetimes.py  docker_ssh.py  embedding_models.py  encryption.py  encryption_health.py  entrypoint_status.py  event_bus.py  file_constants.py  git.py  http_timeouts.py  llama_cpp.py  lmstudio.py  logging.py  logging_config.json  mcp_accounting.py  model_limits.py  model_providers.py  ollama.py  ollama_concurrency.py  omlx.py  openai_codex_auth.py  openrouter.py  rate_limit.py  runtime_manager_client.py  scheduling.py  security.py  sql_utils.py  ssh.py  ssl.py  (+10 more)
ragtime/frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
ragtime/indexer/: __init__.py  background_tasks.py  chat_attachments.py  chat_events.py  chunking.py  code_extraction.py  document_parser.py  export_service.py  file_utils.py  filesystem_service.py  live_visualizations.py  llm_exclusions.py  memory_utils.py  models.py  pdm_service.py  repository.py  routes.py  schema_service.py  service.py  title_generation.py  tool_health.py  tool_presentation.py  utils.py  vector_backends.py  vector_utils.py  visualization_retry.py  workspace_state.py
ragtime/mcp/: __init__.py  __main__.py  config_routes.py  oauth.py  routes.py  server.py  tools.py
ragtime/models/: __init__.py  schemas.py
ragtime/rag/: __init__.py  components.py  prompts.py  userspace_live_data_binding_validator.js  userspace_typescript_validator.js  userspace_window_validator.py
ragtime/tools/: __init__.py  _example_template.py  chart.py  datatable.py  filesystem_indexer.py  git_history.py  influxdb.py  mssql.py  mysql.py  odoo_shell.py  postgres.py  registry.py  solidworks_pdm.py  visualization_validation.py
ragtime/userspace/: __init__.py  cloud_mounts.py  html_templates.py  live_data.py  models.py  preview_host.py  preview_probe.py  routes.py  runtime_errors.py  runtime_routes.py  runtime_service.py  service.py  share_auth.py  sqlite_import.py  sqlite_inspector.py  subagent_service.py  workspace_code_index_service.py
runtime/: __init__.py  auth.py  main.py  shared.py
runtime/core/: __init__.py  shared.py  utils.py  workspace_ops.py
runtime/manager/: __init__.py  api.py  models.py  service.py
runtime/worker/: __init__.py  api.py  content_probe.js  mcp_playwright_server.py  playwright_broker.js  sandbox.py  screenshot.js  service.py
scripts/: setup.sh
tests/: check_frontend_format.sh  check_readme_sync.sh  conftest.py  test_anchored_scheduling.py  test_app_settings_theme.py  test_auth_hardening.py  test_background_task_cancellation.py  test_chat_attachments.py  test_chat_diagnostic_terminal_payloads.py  test_chat_live_visualization_refresh.py  test_chat_runtime_error_classification.py  test_chat_runtime_web_search_pdf.py  test_chunking_resilience.py  test_claude_code_status.py  test_cloud_mounts.py  test_conversation_compaction.py  test_conversation_exports.py  test_docker_prisma_engine.py  test_docker_ssh.py  test_encryption_key_mismatch.py  test_faiss_import.py  test_filesystem_file_collection.py  test_git_history_search.py  test_internal_auth_provider.py  test_knowledge_search_output.py  test_ldap_auth_filters.py  test_legacy_container_dependencies.py  test_llama_cpp_provider.py  test_lmstudio_provider.py  test_mcp_client_credentials.py  test_mcp_oauth_metadata.py  test_mcp_route_filter_authorization.py  test_model_resolution.py  test_omlx_provider.py  test_openai_api_streaming.py  test_openai_codex_provider.py  test_pdm_service_sql_injection.py  test_rag_faiss_hotload.py  test_retry_terminal_tool_timeout.py  test_runtime_core_utils.py  (+38 more)
typings/prisma/: __init__.pyi  enums.pyi  errors.pyi  models.pyi  types.pyi
(+254 files in other folders)
