[project]
name = "ragtime"
version = "2.0.0"
description = "RAG API with Tool Calling - OpenAI-Compatible FastAPI Server"
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
app = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "langchain>=0.1.0,<1.0.0",
    "langchain-openai>=0.0.5,<1.0.0",
    "langchain-anthropic>=0.1.0,<1.0.0",
    "langchain-community>=0.0.20,<1.0.0",
    "langchain-ollama>=0.1.0,<1.0.0",
    "faiss-cpu>=1.7.4,<2.0.0",
    "prisma>=0.15.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "httpx>=0.26.0,<1.0.0",
    "websockets>=12.0,<16.0",
    "paramiko>=3.4.0,<4.0.0",
    "pymssql>=2.2.8,<3.0.0",
    "pymysql>=1.1.0,<2.0.0",
    "langchain-text-splitters>=0.0.1,<1.0.0",
    "tiktoken>=0.5.0,<1.0.0",
    "python-magic>=0.4.27,<1.0.0",
    "chardet>=5.0.0,<6.0.0",
    "ldap3>=2.9.1,<3.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "pypdf>=4.0.0,<5.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "python-pptx>=0.6.21,<1.0.0",
    "odfpy>=1.4.1,<2.0.0",
    "xlrd>=2.0.1,<3.0.0",
    "chonkie[code]>=1.5.0,<2.0.0",
    "striprtf>=0.0.26,<1.0.0",
    "ebooklib>=0.18,<1.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=5.0.0,<6.0.0",
    "extract-msg>=0.48.0,<1.0.0",
    "pytesseract>=0.3.10,<1.0.0",
    "Pillow>=10.0.0,<11.0.0",
    "rawpy>=0.19.0,<1.0.0",
    "numpy>=1.24.0,<3.0.0",
    "mcp>=1.0.0,<2.0.0",
    "pysmb>=1.2.9,<2.0.0",
    "psutil>=5.9.0,<6.0.0",
]
runtime = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
]
legacy = [
    "numpy>=1.24.0,<2.0.0",
    "rawpy>=0.19.0,<0.22.0",
]

[tool.pylint.main]
py-version = "3.12"
ignore = ["CVS", ".git", "__pycache__", ".venv", "venv", "data"]
extension-pkg-allow-list = ["pydantic"]

[tool.pylint."messages control"]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "W0511",  # fixme
    "W1203",  # logging-fstring-interpolation
    "W0718",  # broad-exception-caught
    "R0801",  # duplicate-code
    "E0401",  # import-error
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.typecheck]
ignored-modules = ["pydantic", "langchain", "langchain_core", "langchain_openai", "langchain_anthropic", "langchain_community"]

[tool.pyright]
include = ["app", "ragtime", "indexer", "scripts"]
exclude = ["**/node_modules", "**/__pycache__", ".git", "data", ".data", ".venv", "venv"]
extraPaths = ["./ragtime", "./indexer", "./app"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportPrivateUsage = "none"
stubPath = "typings"
# Optional dependencies that may not be installed in all environments
ignore = ["**/smb/**", "**/pysmb/**"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
